--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -49,20 +49,22 @@
                     <h4 class="text-center">Photo</h4>
                 </div>
                 <div class="card-body row justify-content-center g-2">
-                    <label for="current-photo">Current Photo:</label>
+                    <label for="current-photo">Current Photos:</label>
                     <div id="gallery" class="row">
                         {% if post.photos|length %}
-                        {% set photos = post.photos.split(',') %}
+                            {% set photos = post.photos.split(',') %}
                             {% for photo in photos %}
-                            <div class="photo-container col-sm-4 col-md-6 col-lg-4">
-                                <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                class="{{ post.slug }}-gallery">
-                                    <img class="img-thumbnail gallery-item" src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}" alt="Photo {{ loop.index }}">
-                                </a>
-                                <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
-                                    <i class="bi bi-trash-fill"></i>
-                                </a>
-                            </div>
+                                <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                    <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                        class="{{ post.slug }}-gallery">
+                                        <img class="img-thumbnail gallery-item"
+                                            src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                            alt="Photo {{ loop.index }}">
+                                    </a>
+                                    <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                        <i class="bi bi-trash-fill"></i>
+                                    </a>
+                                </div>
                             {% endfor %}
                         {% endif %}
                     </div>
@@ -71,12 +73,11 @@
                         <input type="hidden" id="collection" value="blogs">
                         <input type="hidden" id="doc-id" value="{{ post._id }}">
                         <label for="drop-area" class="form-label">New Photo</label>
-                        <input type="file" name="files" id="drop-file-elem" accept="image/*">
-                        <div id="drop-area" data-multiple="false">
+                        <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
+                        <div id="drop-area" data-multiple="true">
                             <i class="bi bi-upload"></i>
                             Drag&drop file here or click to select...
                         </div>
-                        <small>This will replace the current image (if any).</small>
                     </div>
                 </div>
             </div>
@@ -88,7 +89,8 @@
 <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
 <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
-<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
+    referrerpolicy="origin"></script>
 <!-- CREDIT: https://github.com/biati-digital/glightbox -->
 <script type="text/javascript">
     const lightbox = GLightbox({ 'selector': '.{{ post.slug }}-gallery' });
@@ -104,11 +106,11 @@
         max_height: 500,
         paste_as_text: true,
         image_prepend_url: window.location.protocol + "//" + window.location.host + "/uploads",
-        document_base_url : window.location.protocol + "//" + window.location.host,
+        document_base_url: window.location.protocol + "//" + window.location.host,
         relative_urls: false,
-        content_css : '/static/css/style.css',
+        content_css: '/static/css/style.css',
         content_style: 'body { background-color: #fffcf6; }',
-        image_list: function(success) {
+        image_list: function (success) {
             success(getPhotoList());
         }
     });
