--- a/templates/contact.html
+++ b/templates/contact.html
@@ -61,7 +61,7 @@
                 <div class="card card-contact-form">
                     <div class="card-body">
                         <h4 class="card-title">Send me an email</h4>
-                        <form class="d-grid">
+                        <form class="d-grid" method="POST">
                             <div class="form-floating">
                                 <input class="form-control" type="text" id="name" name="name" placeholder="Your Name"
                                     aria-label="Name field">
