--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -124,10 +124,10 @@
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <!-- flash messages -->
                 <div class="toast-container position-absolute top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
-                    {% with messages = get_flashed_messages() %}
+                    {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
-                            {% for message in messages %}
-                                <div class="d-flex w-100 toast" role="alert" aria-live="assertive" aria-atomic="true">
+                            {% for category, message in messages %}
+                                <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
                                     <span class="m-auto px-2">
                                         <i class="bi bi-bell-fill"></i>
                                     </span>
